# Vanguard-Enginev3

./: .gitignore  01_Brief.md  03_DecisionsLog.md  Cargo.toml  scene_graph.json  setup.bat
src/: main.rs
src/anker_breaker/: mod.rs
src/anker_breaker/animation/: ik_solver.rs  mod.rs
src/anker_breaker/core/: mod.rs  perception.rs
src/anker_breaker/renderer/: mod.rs  mod.rs_temp  reconstruction.rs  scratch_new.rs
src/anker_breaker/systems/: mod.rs  movement.rs  world_partitioning.rs
src/anker_breaker/ui/: mod.rs
src/shaders/: blit.wgsl  denoise.wgsl  path_trace.wgsl  pbr_uber.wgsl  temporal.wgsl  upscale.wgsl
src/vge/: mod.rs
src/vge/core/: perception.rs  scene_node.rs  task_graph.rs
src/vge/renderer/: mod.rs
src/vge/systems/: world_partitioning.rs
