[package]
name = "vanguard_engine_v3"
version = "0.1.0"
edition = "2024"

[dependencies]
pyo3 = { version = "0.21", features = ["extension-module", "auto-initialize"] }
rapier3d = "0.19"
wgpu = { version = "0.19.4", features = ["dx12", "wgsl"] }
winit = "0.29.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
tokio = { version = "1", features = ["full"] }
pollster = "0.3"
bytemuck = { version = "1", features = ["derive"] }
image = "0.25"
egui = "0.27"
egui-winit = "0.27"
egui-wgpu = "0.27"
nalgebra = "0.32"
